# calibrationTool

./: .gitignore  CMakeLists.txt  README.md
AndroidClient/ClientApp/: bellus3d_debug.keystore  settings.gradle
AndroidClient/ClientApp/RATestTool/: build.gradle
AndroidClient/ClientApp/RATestTool/src/androidTest/java/com/bellus3d/android/b3d4/ratesttool/: ExampleInstrumentedTest.java
AndroidClient/ClientApp/RATestTool/src/main/: AndroidManifest.xml
AndroidClient/ClientApp/RATestTool/src/main/java/com/bellus3d/android/b3d4/ratesttool/: BootBroadCastReceiver.java  PermissionService.java  RATestTool.java  RAUtils.java
AndroidClient/ClientApp/RATestTool/src/main/res/layout/: activity_ratest_tool.xml
AndroidClient/ClientApp/RATestTool/src/main/res/values/: strings.xml
AndroidClient/ClientApp/RATestTool/src/test/java/com/bellus3d/android/b3d4/ratesttool/: ExampleUnitTest.java
AndroidClient/ClientApp/b3d4app/: build.gradle
AndroidClient/ClientApp/b3d4app/src/androidTest/java/com/example/b3d4app/: ExampleInstrumentedTest.java
AndroidClient/ClientApp/b3d4app/src/main/: AndroidManifest.xml
AndroidClient/ClientApp/b3d4app/src/main/java/com/bellus3d/android/arc/b3d4app/: BootCompletedReceiver.java  CheckUtil.java  MainActivity.java  MonitoringService.java
AndroidClient/ClientApp/b3d4app/src/main/res/layout/: activity_main.xml
AndroidClient/ClientApp/b3d4app/src/main/res/values/: strings.xml
AndroidClient/ClientApp/b3d4app/src/test/java/com/example/b3d4app/: ExampleUnitTest.java
AndroidClient/ClientApp/b3d4client/: build.gradle
AndroidClient/ClientApp/b3d4client/src/androidTest/java/com/example/b3d4newclient/: ExampleInstrumentedTest.java
AndroidClient/ClientApp/b3d4client/src/main/: AndroidManifest.xml
AndroidClient/ClientApp/b3d4client/src/main/cpp/: CMakeLists.txt  b3d4module.cpp  b3d4module.h  jnihelpers.cpp  jnihelpers.h
AndroidClient/ClientApp/b3d4client/src/main/java/com/bellus3d/android/arc/b3d4client/: AppStatusManager.java  DiskService.java  FPSChecker.java  FormattingService.java  FrameBuffer.java  GlobalResourceService.java  MMFrameBuffer.java  PermissionsService.java  ProcessingService.java  RecordingService.java  StatusLightService.java  StreamHelper.java  TimeStampService.java
AndroidClient/ClientApp/b3d4client/src/main/res/values/: strings.xml
AndroidClient/ClientApp/b3d4client/src/test/java/com/example/b3d4newclient/: ExampleUnitTest.java
AndroidClient/ClientApp/calibrationtool/: build.gradle
AndroidClient/ClientApp/calibrationtool/src/androidTest/java/com/bellus3d/android/b3d4/calibrationtool/: ExampleInstrumentedTest.java
AndroidClient/ClientApp/calibrationtool/src/main/: AndroidManifest.xml
AndroidClient/ClientApp/calibrationtool/src/main/java/com/bellus3d/android/calibrationtool/: CalibrationTool.java  PermissionService.java  WifiTestUtil.java
AndroidClient/ClientApp/calibrationtool/src/main/res/layout/: activity_calibration_tool.xml
AndroidClient/ClientApp/calibrationtool/src/main/res/values/: strings.xml
AndroidClient/ClientApp/gradle/wrapper/: gradle-wrapper.properties
Modules/b3d4client/: CMakeLists.txt  b3d4client.cmake  libs.cmake
Modules/b3d4client/include/b3d4client/: B3D4AutoCalib.h  B3D4ClientJNIError.h  B3D4ExportDef.h  B3DCamera.h  B3DCameraError.h  B3DCameraState.h  B3DCameraStreamListener.h  B3DConfig.h  B3DNativeProcessError.h  CameraStreamProcessor.h  DepthStitcher.h
Modules/b3d4client/src/: B3D4AutoCalib.cpp  B3D4FileNames.h  B3DCamera.cpp  B3DCameraFiles.h  B3DCameraImpl.cpp  B3DCameraImpl.h  B3DCamera_B3D4.cpp  B3DCamera_B3D4.h  B3DCamera_Files.cpp  B3DCamera_Files.h  BackTrace.cpp  CameraStreamProcessor.cpp  CameraStreamProcessorImpl.cpp  CameraStreamProcessorImpl.h  DepthCameraSettings.cpp  DepthCameraSettings.h  DepthStitcher.cpp  backTrace.h
Modules/b3d4client/unused/: DepthCamera_Q845.cpp  DepthCamera_Q845.h
Modules/b3ddepth/: libs.cmake
Modules/b3ddepth/core/include/b3ddepth/core/: B3DImage.h  B3DVersion.h  CameraCalib.h  DepthConfig.h  DepthProcessError.h  DepthProcessor.h
Modules/b3ddepth/core/include/b3ddepth/core/ext/: CameraCalibExt.h  DepthConfigExt.h  DepthProcessorExt.h  DepthPropsExt.h  DspFunctionExt.h
Modules/b3ddepth/libs/Release/: b3ddepth.lib
Modules/b3ddepth/utils/include/b3ddepth/utils/: B3DFileIO.h  B3DUtils.h  TLog.h  TProfile.h  imageutils.h
Modules/b3ddepth/utils/include/b3ddepth/utils/ext/: B3DCalibrationData.h
Modules/b3dutils/: CMakeLists.txt  libs.cmake
Modules/b3dutils/include/b3dutils/: B3DUtilsExportDef.h  SourceLocation.h  common_utils.h  log.h  macros.h  zip_file.hpp
Modules/b3dutils/src/: SourceLocation.cpp  common_utils.cpp  log.cpp
Modules/libb3di/: b3di.cmake  libs.cmake
Modules/libb3di/include/b3di/: AutoCalib.h  B3d_API.h  B3d_defs.h  B3d_files.h  B3d_types.h  B3d_utils.h  CameraContainer.h  CameraParams.h  DepthCamProps.h  DepthProcessor.h  DepthUnitConverter.h  EarTracker.h  FaceIdentifier.h  FaceLandmarkContainer.h  FaceMask.h  FaceModelTemplate.h  FaceModelTemplateHB.h  FaceTracker.h  FaceTrackerASM.h  FaceTrackerFPP.h  FaceTrackerMT.h.unused  FileContainer.h  FileUtils.h  FrameInfo.h  FrameStore.h  HeadMeshI.h  HeadMeshProcessor.h  ImageContainer.h  ImageRenderer.h  JawAlignment.h  LPImage.h  LiplineEditor.h  PlaneModel.h  PointCloud.h  PointCloudContainer.h  PolyMesh.h  ProgressTracker.h  SimpleRansac.h  SkinDetector.h  TImage-test.h  (+13 more)
Modules/libb3di/include/b3di/b3di/: ImageRenderer.h  JawAlignment.h
Modules/libb3di/include/trimesh2/: TriMesh.h
Modules/libb3di/libs/Debug/: cppDes.lib  eyeLike.lib  facepp-sdk.lib  freeglut_static.lib  gluit_lib.lib  linear.lib  polypartition.lib  sha256.lib
Modules/libb3di/libs/Release/: cppDes.lib  eyeLike.lib  freeglut_static.lib  gluit_lib.lib  linear.lib  polypartition.lib  sha256.lib  stasm.lib  trimesh2.lib
TestAppWin/: 4DCapture_main.cpp  CMakeLists.txt  aec_main.cpp  asyncIRframe_main.cpp  cvui.h  decode.cpp  restore_main.cpp  testHeadPostTrack_main.cpp  teststereo_main.cpp
patchs/: 0001-change-calibration-tool-layout.patch  0002-change-saved-name.patch
(+66 files in other folders)
